custom scrollbar & fix nav bullet position

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -3,3 +3,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+	width: 10px;
+	height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+	@apply bg-zinc-700 rounded-full;
+}
+
+::-webkit-scrollbar-track {
+	@apply bg-zinc-900;
+}
